@@ -1,3 +1,14 @@
+2010-04-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* libtiff/tif_dir.c (_TIFFVSetField): Add a special error case for
+	when the tag count value is zero.  Error handling is still a
+	regression since in 3.9.2, empty tags are skipped (with a warning)
+	rather than returning a hard error and refusing to read the file.
+
+	* tools/ppm2tiff.c (main): While case for parsing comment line
+	requires extra parenthesis to work as expected.  Reported by
+	Thomas Sinclair.
+
 2010-04-02  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* libtiff/tif_read.c (primarily): Add support for 
